--- a/Copy_of_Mikael_Daniels_Classification2.ipynb
+++ b/Copy_of_Mikael_Daniels_Classification2.ipynb
@@ -84,7 +84,7 @@
         "from sklearn.gaussian_process import GaussianProcessClassifier\n",
         "from google.colab import drive"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -106,13 +106,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "1d7ad524-b064-4e1a-c183-64f8daac1c3b"
+        "outputId": "3a8a1e21-1187-423c-c4da-3e8405051e6e"
       },
       "source": [
-        "train = pd.read_csv('train (1).csv')\n",
-        "print(train.head())\n"
+        "train = pd.read_csv('https://raw.githubusercontent.com/Stephane-Masamba/Team_4_CPT_ML-Classification/Mikael/train%20(1).csv')\n",
+        "print(train.head())"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,13 +137,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "734490ba-864f-4811-ed13-8a37495721df"
+        "outputId": "ce8e705b-ce50-4e10-ab22-9559b150d61a"
       },
       "source": [
-        "test = pd.read_csv('test (1).csv')\n",
+        "test = pd.read_csv('https://raw.githubusercontent.com/Stephane-Masamba/Team_4_CPT_ML-Classification/Mikael/test%20(1).csv')\n",
         "print(test.head())\n"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,13 +168,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "68a99478-375f-47e4-b133-2c2c27a15867"
+        "outputId": "5577fbd8-f15b-45b9-e6fa-5f597aa1a4be"
       },
       "source": [
-        "sample = pd.read_csv('sample_submission.csv')\n",
+        "sample = pd.read_csv('https://raw.githubusercontent.com/Stephane-Masamba/Team_4_CPT_ML-Classification/Mikael/sample_submission.csv')\n",
         "print(sample.head())\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
