--- a/Copy_of_Mikael_Daniels_Classification2.ipynb
+++ b/Copy_of_Mikael_Daniels_Classification2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Copy of Mikael_Daniels_Classification2.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Stephane-Masamba/Team_4_CPT_ML-Classification/blob/Rachel/Copy_of_Mikael_Daniels_Classification2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -73,7 +84,7 @@
         "!pip install spacy\n",
         "!pip install NLTK"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +145,7 @@
         "from sklearn.gaussian_process import GaussianProcessClassifier\n",
         "from google.colab import drive"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +165,7 @@
         "nltk.download('wordnet')\n",
         "nltk.download('stopwords')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +205,7 @@
       "source": [
         "nlp = spacy.load('en_core_web_sm')"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +233,7 @@
         "train = pd.read_csv('https://raw.githubusercontent.com/Stephane-Masamba/Team_4_CPT_ML-Classification/Mikael/train%20(1).csv')\n",
         "print(train.head())"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +264,7 @@
         "test = pd.read_csv('https://raw.githubusercontent.com/Stephane-Masamba/Team_4_CPT_ML-Classification/Mikael/test%20(1).csv')\n",
         "print(test.head())\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,7 +295,7 @@
         "sample = pd.read_csv('https://raw.githubusercontent.com/Stephane-Masamba/Team_4_CPT_ML-Classification/Mikael/sample_submission.csv')\n",
         "print(sample.head())\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,7 +848,7 @@
       "source": [
         "from sklearn.feature_extraction.text import TfidfVectorizer\n"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -850,7 +861,7 @@
       "source": [
         "tf_vect = TfidfVectorizer(ngram_range=(1, 2))\n"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -943,7 +954,7 @@
         "\n",
         "    return [avg_train_accuracy, avg_test_accuracy]\n"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1602,6 +1613,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "BJlh_PGlCMbF"
+      },
+      "source": [
+        "#Modelling with tokenization and lemmatization"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "X2ZRcRRWjCn9",
@@ -1616,7 +1637,7 @@
         "train = pd.read_csv('https://raw.githubusercontent.com/Stephane-Masamba/Team_4_CPT_ML-Classification/Mikael/train%20(1).csv')\n",
         "print(train.head())"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1647,7 +1668,7 @@
         "test = pd.read_csv('https://raw.githubusercontent.com/Stephane-Masamba/Team_4_CPT_ML-Classification/Mikael/test%20(1).csv')\n",
         "print(test.head())"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1683,7 +1704,7 @@
         "  train.loc[i, 'message'] = tweet\n",
         "  i += 1"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1700,7 +1721,7 @@
       "source": [
         "train"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1847,7 +1868,7 @@
         "  train.loc[train_index, 'message'] = tweet\n",
         "  train_index += 1"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1864,7 +1885,7 @@
       "source": [
         "train"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2007,7 +2028,7 @@
         "\n",
         "  train_index += 1"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2024,7 +2045,7 @@
       "source": [
         "train"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2167,7 +2188,7 @@
         "\n",
         "  train_index += 1"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2184,7 +2205,7 @@
       "source": [
         "train"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2329,7 +2350,7 @@
         "  test.loc[j, 'message'] = message\n",
         "  j += 1"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2346,7 +2367,7 @@
       "source": [
         "test"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2477,7 +2498,7 @@
         "  test.loc[test_index, 'message'] = message\n",
         "  test_index += 1"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2494,7 +2515,7 @@
       "source": [
         "test"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2625,7 +2646,7 @@
         "\n",
         "  test_index += 1"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2642,7 +2663,7 @@
       "source": [
         "test"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2773,7 +2794,7 @@
         "\n",
         "  test_index += 1"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2790,7 +2811,7 @@
       "source": [
         "test"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2918,7 +2939,7 @@
         "X_train = train['message']\n",
         "X_train"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2960,7 +2981,7 @@
         "y_train = train['sentiment']\n",
         "y_train"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2997,7 +3018,7 @@
       "source": [
         "X_train = tf_vect.fit_transform(X_train)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3010,7 +3031,7 @@
       "source": [
         "X_test = test['message']"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3023,7 +3044,7 @@
       "source": [
         "X_test = tf_vect.transform(X_test)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3036,7 +3057,7 @@
       "source": [
         "sv = SVC()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3054,7 +3075,7 @@
         "sv_accuracy = accuracy(sv)\n",
         "sv_accuracy"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3080,7 +3101,7 @@
       "source": [
         "bernoulli = BernoulliNB()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3098,7 +3119,7 @@
         "bernoulli_accuracy = accuracy(bernoulli)\n",
         "bernoulli_accuracy"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3124,7 +3145,7 @@
       "source": [
         "mnb = MultinomialNB()"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3142,7 +3163,7 @@
         "mnb_accuracy = accuracy(mnb)\n",
         "mnb_accuracy"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3168,7 +3189,7 @@
       "source": [
         "sgd = SGDClassifier()"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3186,7 +3207,7 @@
         "sgd_accuracy = accuracy(sgd)\n",
         "sgd_accuracy"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3212,7 +3233,7 @@
       "source": [
         "rand_forest = RandomForestClassifier()"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3230,7 +3251,7 @@
         "rand_forest_accuracy = accuracy(rand_forest)\n",
         "rand_forest_accuracy"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3256,7 +3277,7 @@
       "source": [
         "knn = KNeighborsClassifier()"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3274,7 +3295,7 @@
         "knn_accuracy = accuracy(knn)\n",
         "knn_accuracy"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3300,7 +3321,7 @@
       "source": [
         "grad_booster = GradientBoostingClassifier()"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3318,7 +3339,7 @@
         "grad_booster_accuracy = accuracy(grad_booster)\n",
         "grad_booster_accuracy"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3344,7 +3365,7 @@
       "source": [
         "extra_trees = ExtraTreesClassifier()"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3362,7 +3383,7 @@
         "extra_trees_accuracy = accuracy(extra_trees)\n",
         "extra_trees_accuracy"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3388,7 +3409,7 @@
       "source": [
         "bagging = BaggingClassifier()"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3406,7 +3427,7 @@
         "bagging_accuracy = accuracy(bagging)\n",
         "bagging_accuracy"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3432,7 +3453,7 @@
       "source": [
         "dec_tree = DecisionTreeClassifier()"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3450,7 +3471,7 @@
         "dec_tree_accuracy = accuracy(dec_tree)\n",
         "dec_tree_accuracy"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3476,7 +3497,7 @@
       "source": [
         "linear_sv = LinearSVC()"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3494,7 +3515,7 @@
         "linear_sv_accuracy = accuracy(linear_sv)\n",
         "linear_sv_accuracy"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3538,7 +3559,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
