--- a/Copy_of_Mikael_Daniels_Classification2.ipynb
+++ b/Copy_of_Mikael_Daniels_Classification2.ipynb
@@ -5340,7 +5340,7 @@
       "source": [
         "test"
       ],
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5470,7 +5470,7 @@
         "entities(test)\n",
         "lem_text(test)"
       ],
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5593,7 +5593,7 @@
       "source": [
         "X_tes = test['message']"
       ],
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5606,7 +5606,7 @@
       "source": [
         "X_tes = tf_vecto.transform(X_tes)"
       ],
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5619,7 +5619,7 @@
       "source": [
         "predictions = linear_sv.predict(X_tes)"
       ],
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5637,7 +5637,7 @@
         "test['sentiment'] = predictions\n",
         "test"
       ],
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5777,7 +5777,7 @@
         "submission = test[['tweetid', 'sentiment']]\n",
         "submission"
       ],
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5889,6 +5889,19 @@
           "execution_count": 176
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "onaEzTxaLP5R",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "submission.to_csv('submission.csv', index=False)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
