--- a/Team_4_CPT.ipynb
+++ b/Team_4_CPT.ipynb
@@ -5218,6 +5218,9 @@
         "id": "yBIirzqoqHg1"
       },
       "source": [
+        "We worked with various models, and at first the linear SV model and the SGD classifier performed the best, with around 70% accuracy. \n",
+        "\n",
+        "We then decided to fit these two models and increase their performance. Both of the models achieved different precision,recall & F1 scores.\n",
         "\n",
         "With the SV model performing better with precision, but acheiving an accuarcy of 72%. While the SGD model achieved better scores in the other categories, however both models achieved the same accuracy at first.\n",
         "\n",
